--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,100&display=swap');
+
+html {
+	font-family: "Roboto", sans-serif;
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+}
+
+.wrapper {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #1F2937;
+	min-height: 60vh;
+}
+
+.navigation {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 1000px;
+	padding-top: 16px;
+}
+
+.header-logo {
+	font-size: 24px;
+	color: #f9faf8;
+	font-weight: 700;
+}
+
+.header-links {
+	display: flex;
+	gap: 16px;
+}
+
+.header-links .header-link {
+	list-style-type: none;
+}
+
+.header-link a {
+	text-decoration: none;
+	color: #e5e7eb;
+	font-size: 18px;
+}
+
+.hero {
+	display: flex;
+	align-items: stretch;
+	width: 1000px;
+	flex-grow: 4;
+	gap: 32px;
+	margin: 100px 0;
+}
+
+.hero-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	color: #f9faf8;
+	flex: 1;
+	gap: 8px;
+}
+
+.hero-title {
+	font-size: 48px;
+	font-weight: 700;
+}
+
+.hero-para,
+.hero-button a {
+	color: #e5e7eb;
+	font-size: 18px;
+}
+
+.hero-button {
+	display: flex;
+}
+
+.hero-button a {
+	text-decoration: none;
+	background-color: #3882f6;
+	padding: 8px 32px;
+	border-radius: 10px;
+}
+
+.hero-placeholder {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex: 1 1 0;
+	background-color: darkgrey;
+	color: #e5e7eb;
 }
