--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,35 @@ html {
 	background-color: darkgrey;
 	color: #e5e7eb;
 }
+
+.info-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	min-height: 50vh;
+}
+
+.cards {
+	display: flex;
+	gap: 32px;
+}
+
+.card {
+	width: 200px;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.card-text {
+	text-align: center;
+	color: #1f2937;
+	font-size: 18px;
+}
+
+.card-image-container {
+	height: 200px;
+	border: 4px solid #3882f6;
+	border-radius: 16px;
+}
