--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,8 @@ html {
 }
 
 .hero-para,
-.hero-button a {
+.hero-button a,
+.cta-button a {
 	color: #e5e7eb;
 	font-size: 18px;
 }
@@ -87,7 +88,8 @@ html {
 	display: flex;
 }
 
-.hero-button a {
+.hero-button a,
+.cta-button a {
 	text-decoration: none;
 	background-color: #3882f6;
 	padding: 8px 32px;
@@ -134,4 +136,72 @@ html {
 	height: 200px;
 	border: 4px solid #3882f6;
 	border-radius: 16px;
+}
+
+.quote-container {
+	min-height: 50vh;
+	background-color: #e5e7eb;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.quote {
+	max-width: 900px;
+	display: flex;
+	flex-direction: column;
+}
+
+.quote-text {
+	font-size: 36px;
+	font-weight: 100;
+	font-style: italic;
+}
+
+.quote-author {
+	font-size: 24px;
+	align-self: flex-end;
+	font-weight: 700;
+}
+
+.cta-container {
+	display: flex;
+	justify-content: center;
+	height: 40vh;
+}
+
+.cta {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 1000px;
+	gap: 128px;
+	background-color: #3882f6;
+	margin: 100px 0;
+	border-radius: 16px;
+	color: #e5e7eb;
+}
+
+.cta-title {
+	color: #f9faf8;
+}
+
+.cta-button a {
+	border: 2px solid #e5e7eb;
+}
+
+.footer {
+	height: 20vh;
+	background-color: #1F2937;
+	color: #f9faf8;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 18px;
+}
+
+.footer a {
+	text-decoration: none;
+	color: #f9faf8;
 }
